task3/k8s/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway-pod
  template:
    metadata:
      labels:
        app: api-gateway-pod
    spec:
      containers:
      - name: api-gateway
        image: task3-api-gateway
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway-pod
  ports:
  - port: 80
    protocol: TCP
    name: http
